--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8' />
-    <title></title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.6.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.6.0/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
-    </style>
-</head>
-<body>
 
-<div id='map'></div>
+<head>
+  <meta charset='utf-8' />
+  <title></title>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
+  <link href='//api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
+  <link rel='stylesheet' href='//www.mapbox.com/base/latest/base.css'>
+  <link rel='stylesheet' href='assets/site.css'>
+</head>
+
+<body>
+  <div id='map'></div>
+</body>
+
 <script src='//code.jquery.com/jquery-1.8.2.min.js'></script>
 <script src='assets/site.js'></script>
 
-</body>
 </html>
